--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.username=username
+spring.datasource.password=password
