--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build iti0302-2023-backend:
   stage: build
   only:
     refs:
-      - main
+      - master
   tags:
     - main
 
@@ -18,7 +18,7 @@ deploy iti0302-2023-backend:
   stage: deploy
   only:
     refs:
-      - main
+      - master
   tags:
     - main
   script:
