--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ build iti0302-2023-backend:
     - main
 
   script:
+    - chmod +x mvnw
     - ./mvnw package
     - docker build -t iti0302-2023-backend .
 
