Add house coordinates from googleApi to address field of responseObject

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
 logging.level.org.springframework.security=TRACE
+
+google.maps.api.key=AIzaSyDMSISt-STSjORwi5iX4HdhXqMtpOUVICc
