--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
 			<version>4.3.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.12</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
